button mobile fixed

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -27,7 +27,7 @@
 
 @keyframes jsPpicture {
   0% {
-    left: -200px;
+    left: 0px;
   }
   100% {
     left: 30%;
@@ -47,7 +47,7 @@
 }
 @keyframes jsCFound {
   0%{
-    left: 0px;
+    left: -300px;
   }
   100%{
     left: 16%;
@@ -1439,7 +1439,7 @@ ul li {
   color: #858181;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 30px;
   text-decoration: none !important;
   text-shadow: 1px 2px 0px #60605f,
   0px 14px 10px rgba(0,0,0,0.15),
@@ -1559,5 +1559,16 @@ ul li {
 .float:hover {
 box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px, rgba(201, 201, 201, 0.651) 1.95px 1.95px 4px inset;
 }
-
+@media only screen
+  and (min-device-width: 240px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    .float {
+  width: 100px;
+  height: 100px;
+  bottom: 100px;
+  right: 100px;
+  }
+}
 
